[project]
name = "qwasar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[project.scripts]
vd-even = "VD_games.scripts.VD_even:main"
vd-calc = "VD_games.scripts.VD_calc:main"
vd-gcd = "VD_games.scripts.VD_gcd:main"
